@@ -3,6 +3,7 @@
    where the new code caused a regression)
  * lib/Mail/DKIM/TextWrap.pm (flush): remember to update cur position
    when flushing text
+ * t/textwrap.t: another test case illustrating failure in TextWrap.pm
 
 2008-11-10: Jason Long <jlong@messiah.edu>
  * lib/Mail/DKIM/TextWrap.pm (flush): new method to explicitly allow a
